<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.SettingsActivity"
    android:id="@+id/addNewEntryLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/DialUpSettings"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/showPhoneBook"
        android:id="@+id/showPhoneBook"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/viewSwitcher"
        android:layout_alignParentStart="true" />

    <ViewSwitcher
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewSwitcher"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/showPhoneBook"
        android:layout_marginTop="19dp" >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNewEntry"
            android:id="@+id/addNewPhonenumber" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addToPhonebookButton"
                android:id="@+id/addToPhoneBookButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/nameToAdd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameToAdd"
                android:hint="@string/NameFieldHint"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/phoneToAdd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneToAdd"
                android:layout_toStartOf="@+id/addToPhoneBookButton"
                android:hint="@string/PhoneFieldHint" />

        </RelativeLayout>

    </ViewSwitcher>

</RelativeLayout>
